media/transmission/base/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: torrent-external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`torrent.${SECRET_DOMAIN_0}`)"
      kind: Rule
      services:
        - name: transmission
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: transmission-tcp-connect
spec:
  entryPoints:
    - random-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: torrent-tcp
          port: 51413
